# weavie

./: .gdbinit  .gitignore  LICENSE  Makefile  README.md  constants.s  debug.sh  display.s  draft.s  graphics.s  keyboard.s  led.s  linker.ld  logo.s  selection.s  shell.nix  startup.s  utils.s
docs/: led.md  neokey.md  sharp.md
emulator/: Cargo.toml  shell.nix
emulator/src/: display.rs  emulator.rs  keyboard.rs  main.rs  window.rs
examples/syscalls/: Makefile  README.md  hello.s
micropython/: Makefile  code.py  display.py  i2c-scan.py
micropython/lib/adafruit_neokey/: neokey1x4.mpy
micropython/lib/adafruit_seesaw/: analoginput.mpy  attiny8x7.mpy  attinyx16.mpy  crickit.mpy  digitalio.mpy  keypad.mpy  neopixel.mpy  pwmout.mpy  robohat.mpy  rotaryio.mpy  samd09.mpy  seesaw.mpy  tftshield18.mpy
rust/: Cargo.toml  disassembled.s  memory.x  shell.nix
rust/src/: main.rs
src/: constants.s  display.s  globals.s  graphics.s  keyboard.s  led.s  logo.s  main.s  prefill.s  selection.s  startup.s  systick.s  utils.s  weaving_draft.s
